--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "^18.2.0",
     "remotion": "3.2.41",
     "three": "^0.145.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "zustand": "4.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
