--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cmdk": "0.1.20",
     "eslint": "^8.14.0",
     "kbar": "0.1.0-beta.36",
+    "openai": "3.1.0",
     "prettier": "^2.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
